Replace landing sections with updated blocks

--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
         <div class="container">
             <div class="section-header">
                 <div class="badge">Nossos Serviços</div>
-                <h2 class="section-title">Tecnologia pensada como consultoria: personalizada, estratégica e eficiente</h2>
+                <h2 class="section-title">Soluções tecnológicas que geram resultados reais</h2>
                 <p class="section-subtitle">
-                    Cada solução é desenvolvida estrategicamente para resolver desafios específicos 
-                    e impulsionar o crescimento sustentável do seu negócio.
+                    Cada projeto é desenvolvido estrategicamente para resolver desafios específicos 
+                    e impulsionar o crescimento sustentável do seu negócio com ROI comprovado.
                 </p>
             </div>
             
@@ -233,10 +233,10 @@
   <div class="container">
     <div class="section-header">
       <div class="badge">Nossa Abordagem</div>
-      <h2 class="section-title">Processo estruturado para resultados excepcionais</h2>
+      <h2 class="section-title">Metodologia comprovada para resultados excepcionais</h2>
       <p class="section-subtitle">
-        Metodologia comprovada que combina estratégia, tecnologia e execução para
-        entregar soluções que realmente transformam negócios.
+        Processo estruturado que combina estratégia, tecnologia e execução para
+        entregar soluções que realmente transformam negócios com garantia de resultados.
       </p>
     </div>
 
@@ -358,9 +358,9 @@
     <section id="cases" class="homepage-cases">
         <div class="container">
             <div class="section-header">
-                <div class="badge">Resultados Reais</div>
-                <h2 class="section-title">Nossos Cases</h2>
-                <p class="section-subtitle">Projetos que demonstram o impacto da inteligência artificial nos negócios</p>
+                <div class="badge">Resultados Comprovados</div>
+                <h2 class="section-title">Cases de sucesso que transformaram negócios</h2>
+                <p class="section-subtitle">Projetos reais que demonstram o impacto da inteligência artificial nos resultados das empresas</p>
             </div>
 
             <div class="cases-grid">
@@ -407,6 +407,83 @@
         </div>
     </section>
 
+    <!-- Depoimentos -->
+    <section class="testimonials">
+        <div class="container">
+            <div class="section-header">
+                <div class="badge">Depoimentos</div>
+                <h2 class="section-title">O que nossos clientes dizem</h2>
+            </div>
+
+            <div class="testimonials-grid">
+                <div class="testimonial-card">
+                    <div class="testimonial-content">
+                        <p>"A Labrego IA transformou completamente nossa operação. O ROI foi de 300% no primeiro ano e continuamos crescendo."</p>
+                    </div>
+                    <div class="testimonial-author">
+                        <div class="author-avatar">
+                            <i class="fas fa-user"></i>
+                        </div>
+                        <div class="author-info">
+                            <h4>Carlos Silva</h4>
+                            <span>CEO, TechCorp</span>
+                        </div>
+                    </div>
+                    <div class="testimonial-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                </div>
+
+                <div class="testimonial-card">
+                    <div class="testimonial-content">
+                        <p>"Profissionalismo excepcional. Entregaram exatamente o que prometeram, no prazo e com qualidade superior."</p>
+                    </div>
+                    <div class="testimonial-author">
+                        <div class="author-avatar">
+                            <i class="fas fa-user"></i>
+                        </div>
+                        <div class="author-info">
+                            <h4>Ana Costa</h4>
+                            <span>Diretora, InnovaCorp</span>
+                        </div>
+                    </div>
+                    <div class="testimonial-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                </div>
+
+                <div class="testimonial-card">
+                    <div class="testimonial-content">
+                        <p>"A automação implementada nos economizou 40 horas semanais e eliminou praticamente todos os erros manuais."</p>
+                    </div>
+                    <div class="testimonial-author">
+                        <div class="author-avatar">
+                            <i class="fas fa-user"></i>
+                        </div>
+                        <div class="author-info">
+                            <h4>Roberto Lima</h4>
+                            <span>Gerente, LogiSmart</span>
+                        </div>
+                    </div>
+                    <div class="testimonial-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Sobre -->
     <section id="sobre" class="about">
         <div class="container">
