Atualiza seções de serviços, metodologia e cases

--- a/index.html
+++ b/index.html
@@ -157,8 +157,13 @@
                     </div>
                     <h3 class="service-title">Aplicativos Sob Medida</h3>
                     <p class="service-description">
-                        Sistemas web e mobile para escalar vendas e operações, eliminando controles manuais.
+                        Sistemas web e mobile para escalar vendas e operações, eliminando controles manuais e aumentando a produtividade em até 300%.
                     </p>
+                    <div class="service-benefits">
+                        <span class="benefit-tag">Redução de custos</span>
+                        <span class="benefit-tag">Escalabilidade</span>
+                        <span class="benefit-tag">Integração completa</span>
+                    </div>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -166,8 +171,13 @@
                     </div>
                     <h3 class="service-title">Automação de Processos</h3>
                     <p class="service-description">
-                        Projetos focados em automação, eficiência operacional e redução de erros.
+                        Projetos focados em automação inteligente, eficiência operacional e redução de erros humanos em até 95%.
                     </p>
+                    <div class="service-benefits">
+                        <span class="benefit-tag">Economia de tempo</span>
+                        <span class="benefit-tag">Menos erros</span>
+                        <span class="benefit-tag">ROI garantido</span>
+                    </div>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -175,8 +185,13 @@
                     </div>
                     <h3 class="service-title">Inteligência Artificial Aplicada</h3>
                     <p class="service-description">
-                        IA que decide, organiza, gera e transforma dados em ação estratégica.
+                        IA que decide, organiza, gera insights e transforma dados em ação estratégica para tomada de decisões inteligentes.
                     </p>
+                    <div class="service-benefits">
+                        <span class="benefit-tag">Decisões inteligentes</span>
+                        <span class="benefit-tag">Análise preditiva</span>
+                        <span class="benefit-tag">Vantagem competitiva</span>
+                    </div>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -184,8 +199,13 @@
                     </div>
                     <h3 class="service-title">Agentes Inteligentes</h3>
                     <p class="service-description">
-                        IA conversacional para atendimento e suporte, trabalhando 24h por dia.
+                        IA conversacional para atendimento e suporte, trabalhando 24h por dia com taxa de resolução de 90%.
                     </p>
+                    <div class="service-benefits">
+                        <span class="benefit-tag">Atendimento 24/7</span>
+                        <span class="benefit-tag">Satisfação do cliente</span>
+                        <span class="benefit-tag">Redução de custos</span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -240,62 +260,62 @@
       </p>
     </div>
 
-      <div class="process-steps">
-        <div class="process-step">
-          <div class="step-number">01</div>
-          <div class="step-content">
-            <h3 class="process-step-title">Diagnóstico</h3>
-            <p class="process-step-description">Entendemos sua realidade e objetivos de negócio.</p>
-          </div>
+    <div class="process-steps">
+      <div class="process-step">
+        <div class="step-number">01</div>
+        <div class="step-content">
+          <h3 class="process-step-title">Diagnóstico Completo</h3>
+          <p class="process-step-description">Análise profunda da sua realidade, objetivos de negócio e identificação de oportunidades de melhoria.</p>
         </div>
+      </div>
 
-        <div class="process-step">
-          <div class="step-number">02</div>
-          <div class="step-content">
-            <h3 class="process-step-title">Análise Consultiva</h3>
-            <p class="process-step-description">Aprofundamos nos desafios para propor as melhores soluções.</p>
-          </div>
+      <div class="process-step">
+        <div class="step-number">02</div>
+        <div class="step-content">
+          <h3 class="process-step-title">Análise Consultiva</h3>
+          <p class="process-step-description">Aprofundamento nos desafios específicos para propor as melhores soluções tecnológicas alinhadas ao seu orçamento.</p>
         </div>
+      </div>
 
-        <div class="process-step">
-          <div class="step-number">03</div>
-          <div class="step-content">
-            <h3 class="process-step-title">Desenho da Solução</h3>
-            <p class="process-step-description">Criamos um plano detalhado alinhado às suas metas.</p>
-          </div>
+      <div class="process-step">
+        <div class="step-number">03</div>
+        <div class="step-content">
+          <h3 class="process-step-title">Desenho da Solução</h3>
+          <p class="process-step-description">Criação de um plano detalhado com cronograma, recursos necessários e métricas de sucesso claramente definidas.</p>
         </div>
+      </div>
 
-        <div class="process-step">
-          <div class="step-number">04</div>
-          <div class="step-content">
-            <h3 class="process-step-title">Desenvolvimento</h3>
-            <p class="process-step-description">Implementamos com tecnologia moderna e processos ágeis.</p>
-          </div>
+      <div class="process-step">
+        <div class="step-number">04</div>
+        <div class="step-content">
+          <h3 class="process-step-title">Desenvolvimento Ágil</h3>
+          <p class="process-step-description">Implementação com tecnologia moderna, processos ágeis e entregas incrementais para validação contínua.</p>
         </div>
+      </div>
 
-        <div class="process-step">
-          <div class="step-number">05</div>
-          <div class="step-content">
-            <h3 class="process-step-title">Aprovação</h3>
-            <p class="process-step-description">Você valida cada etapa para garantir aderência total.</p>
-          </div>
+      <div class="process-step">
+        <div class="step-number">05</div>
+        <div class="step-content">
+          <h3 class="process-step-title">Validação e Aprovação</h3>
+          <p class="process-step-description">Você valida cada etapa e funcionalidade para garantir aderência total às suas expectativas e necessidades.</p>
         </div>
+      </div>
 
-        <div class="process-step">
-          <div class="step-number">06</div>
-          <div class="step-content">
-            <h3 class="process-step-title">Entrega</h3>
-            <p class="process-step-description">Publicamos o projeto com segurança e acompanhamento.</p>
-          </div>
+      <div class="process-step">
+        <div class="step-number">06</div>
+        <div class="step-content">
+          <h3 class="process-step-title">Entrega e Deploy</h3>
+          <p class="process-step-description">Publicação segura do projeto com treinamento da equipe e documentação completa para autonomia total.</p>
         </div>
+      </div>
 
-        <div class="process-step">
-          <div class="step-number">07</div>
-          <div class="step-content">
-            <h3 class="process-step-title">Acompanhamento (30 dias)</h3>
-            <p class="process-step-description">Monitoramos resultados iniciais e realizamos ajustes.</p>
-          </div>
+      <div class="process-step">
+        <div class="step-number">07</div>
+        <div class="step-content">
+          <h3 class="process-step-title">Suporte Garantido</h3>
+          <p class="process-step-description">30 dias de acompanhamento gratuito com monitoramento de resultados e ajustes necessários.</p>
         </div>
+      </div>
     </div>
   </div>
 </section>
@@ -372,37 +392,91 @@
                             <span>Vitriny AI</span>
                         </div>
                     </div>
-                    <h3>Conversão 47% maior</h3>
-                    <p>Loja virtual que reduziu abandono de carrinho e aumentou o ticket médio com o Vitriny AI.</p>
+                    <h3 class="case-title">Conversão 47% maior</h3>
+                    <p class="case-description">
+                        Loja virtual que reduziu abandono de carrinho e aumentou o ticket médio com o Vitriny AI, 
+                        gerando R$ 2.3M em vendas adicionais no primeiro ano.
+                    </p>
+                    <div class="case-metrics">
+                        <div class="metric">
+                            <span class="metric-value">+47%</span>
+                            <span class="metric-label">Conversão</span>
+                        </div>
+                        <div class="metric">
+                            <span class="metric-value">-35%</span>
+                            <span class="metric-label">Abandono</span>
+                        </div>
+                        <div class="metric">
+                            <span class="metric-value">+120%</span>
+                            <span class="metric-label">Ticket médio</span>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="case-card">
                     <div class="case-header">
                         <div class="case-category">Financeiro</div>
                         <div class="case-type">
-                            <i class="fas fa-shield-alt"></i>
-                            <span>Fraude</span>
+                            <i class="fas fa-university"></i>
+                            <span>IA Antifraude</span>
                         </div>
                     </div>
-                    <h3>Fraudes -85%</h3>
-                    <p>Banco que adotou detecção em tempo real e diminuiu drasticamente as perdas.</p>
+                    <h3 class="case-title">Fraudes -85%</h3>
+                    <p class="case-description">
+                        Banco que adotou detecção em tempo real e diminuiu drasticamente as perdas por fraude, 
+                        economizando R$ 15M anuais em prejuízos.
+                    </p>
+                    <div class="case-metrics">
+                        <div class="metric">
+                            <span class="metric-value">-85%</span>
+                            <span class="metric-label">Fraudes</span>
+                        </div>
+                        <div class="metric">
+                            <span class="metric-value">99.2%</span>
+                            <span class="metric-label">Precisão</span>
+                        </div>
+                        <div class="metric">
+                            <span class="metric-value">R$ 15M</span>
+                            <span class="metric-label">Economia anual</span>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="case-card">
                     <div class="case-header">
-                        <div class="case-category">Automação</div>
+                        <div class="case-category">Operações</div>
                         <div class="case-type">
-                            <i class="fas fa-cogs"></i>
+                            <i class="fas fa-robot"></i>
                             <span>RPA</span>
                         </div>
                     </div>
-                    <h3>Processos 80% mais rápidos</h3>
-                    <p>Robôs que executam tarefas repetitivas, liberando equipes para focar em estratégia.</p>
+                    <h3 class="case-title">Processos 80% mais rápidos</h3>
+                    <p class="case-description">
+                        Robôs que executam tarefas repetitivas, liberando equipes para focar em estratégia e 
+                        reduzindo custos operacionais em 60%.
+                    </p>
+                    <div class="case-metrics">
+                        <div class="metric">
+                            <span class="metric-value">+80%</span>
+                            <span class="metric-label">Velocidade</span>
+                        </div>
+                        <div class="metric">
+                            <span class="metric-value">-60%</span>
+                            <span class="metric-label">Custos</span>
+                        </div>
+                        <div class="metric">
+                            <span class="metric-value">24/7</span>
+                            <span class="metric-label">Operação</span>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <div class="center-btn">
-                <a href="pages/cases.html" class="btn btn-secondary btn-large">Ver todos os cases <span class="arrow">→</span></a>
+            <div class="cases-cta">
+                <button class="btn btn-outline" onclick="window.open('pages/cases.html', '_blank')">
+                    Ver Todos os Cases
+                    <span class="arrow">→</span>
+                </button>
             </div>
         </div>
     </section>
