--- a/index.html
+++ b/index.html
@@ -248,15 +248,14 @@
         </div>
     </section>
 
-   <!-- ===== Nossa Abordagem ===== -->
+  <!-- ===== Nossa Abordagem ===== -->
 <section id="metodologia" class="methodology">
   <div class="container">
     <div class="section-header">
       <div class="badge">Nossa Abordagem</div>
-      <h2 class="section-title">Metodologia comprovada para resultados excepcionais</h2>
+      <h2 class="section-title">Como atuamos para transformar o seu negócio</h2>
       <p class="section-subtitle">
-        Processo estruturado que combina estratégia, tecnologia e execução para
-        entregar soluções que realmente transformam negócios com garantia de resultados.
+        Metodologia colaborativa e orientada a resultados, unindo estratégia, tecnologia e inovação em cada etapa.
       </p>
     </div>
 
@@ -264,24 +263,30 @@
       <div class="process-step">
         <div class="step-number">01</div>
         <div class="step-content">
-          <h3 class="process-step-title">Diagnóstico Completo</h3>
-          <p class="process-step-description">Análise profunda da sua realidade, objetivos de negócio e identificação de oportunidades de melhoria.</p>
+          <h3 class="process-step-title">Imersão Estratégica</h3>
+          <p class="process-step-description">
+            Entendimento profundo dos seus objetivos, público-alvo e desafios para definir prioridades.
+          </p>
         </div>
       </div>
 
       <div class="process-step">
         <div class="step-number">02</div>
         <div class="step-content">
-          <h3 class="process-step-title">Análise Consultiva</h3>
-          <p class="process-step-description">Aprofundamento nos desafios específicos para propor as melhores soluções tecnológicas alinhadas ao seu orçamento.</p>
+          <h3 class="process-step-title">Planejamento Personalizado</h3>
+          <p class="process-step-description">
+            Elaboração de um roadmap detalhado com cronograma, recursos necessários e indicadores de sucesso.
+          </p>
         </div>
       </div>
 
       <div class="process-step">
         <div class="step-number">03</div>
         <div class="step-content">
-          <h3 class="process-step-title">Desenho da Solução</h3>
-          <p class="process-step-description">Criação de um plano detalhado com cronograma, recursos necessários e métricas de sucesso claramente definidas.</p>
+          <h3 class="process-step-title">Design & Prototipagem</h3>
+          <p class="process-step-description">
+            Criação de protótipos interativos para validar fluxos de usuário e experiência antes do desenvolvimento.
+          </p>
         </div>
       </div>
 
@@ -289,31 +294,39 @@
         <div class="step-number">04</div>
         <div class="step-content">
           <h3 class="process-step-title">Desenvolvimento Ágil</h3>
-          <p class="process-step-description">Implementação com tecnologia moderna, processos ágeis e entregas incrementais para validação contínua.</p>
+          <p class="process-step-description">
+            Entregas incrementais com feedback contínuo, garantindo alinhamento e adaptabilidade.
+          </p>
         </div>
       </div>
 
       <div class="process-step">
         <div class="step-number">05</div>
         <div class="step-content">
-          <h3 class="process-step-title">Validação e Aprovação</h3>
-          <p class="process-step-description">Você valida cada etapa e funcionalidade para garantir aderência total às suas expectativas e necessidades.</p>
+          <h3 class="process-step-title">Testes & Qualidade</h3>
+          <p class="process-step-description">
+            Revisão completa de performance, segurança e usabilidade para garantir excelência no produto final.
+          </p>
         </div>
       </div>
 
       <div class="process-step">
         <div class="step-number">06</div>
         <div class="step-content">
-          <h3 class="process-step-title">Entrega e Deploy</h3>
-          <p class="process-step-description">Publicação segura do projeto com treinamento da equipe e documentação completa para autonomia total.</p>
+          <h3 class="process-step-title">Implementação & Treinamento</h3>
+          <p class="process-step-description">
+            Deploy seguro e capacitação da sua equipe para uso eficiente e autônomo da solução.
+          </p>
         </div>
       </div>
 
       <div class="process-step">
         <div class="step-number">07</div>
         <div class="step-content">
-          <h3 class="process-step-title">Suporte Garantido</h3>
-          <p class="process-step-description">30 dias de acompanhamento gratuito com monitoramento de resultados e ajustes necessários.</p>
+          <h3 class="process-step-title">Suporte & Evolução</h3>
+          <p class="process-step-description">
+            Acompanhamento contínuo, ajustes e otimizações para maximizar resultados a longo prazo.
+          </p>
         </div>
       </div>
     </div>
