--- a/index.html
+++ b/index.html
@@ -248,137 +248,65 @@
         </div>
     </section>
 
-  <!-- ===== Nossa Abordagem ===== -->
+<!-- ===== Nossa Abordagem ===== -->
 <section id="metodologia" class="methodology">
   <div class="container">
     <div class="section-header">
       <div class="badge">Nossa Abordagem</div>
-      <h2 class="section-title">Como atuamos para transformar o seu negócio</h2>
+      <h2 class="section-title">Metodologia comprovada para resultados excepcionais</h2>
       <p class="section-subtitle">
-        Metodologia colaborativa e orientada a resultados, unindo estratégia, tecnologia e inovação em cada etapa.
+        Processo estruturado que combina estratégia, tecnologia e execução para transformar negócios.
       </p>
     </div>
 
     <div class="process-steps">
       <div class="process-step">
         <div class="step-number">01</div>
-        <div class="step-content">
-          <h3 class="process-step-title">Imersão Estratégica</h3>
-          <p class="process-step-description">
-            Entendimento profundo dos seus objetivos, público-alvo e desafios para definir prioridades.
-          </p>
-        </div>
+        <h3 class="process-step-title">Diagnóstico Completo</h3>
+        <p class="process-step-description">
+          Análise profunda da sua realidade, objetivos e identificação de oportunidades.
+        </p>
       </div>
-
       <div class="process-step">
         <div class="step-number">02</div>
-        <div class="step-content">
-          <h3 class="process-step-title">Planejamento Personalizado</h3>
-          <p class="process-step-description">
-            Elaboração de um roadmap detalhado com cronograma, recursos necessários e indicadores de sucesso.
-          </p>
-        </div>
+        <h3 class="process-step-title">Planejamento Estratégico</h3>
+        <p class="process-step-description">
+          Roadmap detalhado com cronograma, recursos e indicadores de sucesso.
+        </p>
       </div>
-
       <div class="process-step">
         <div class="step-number">03</div>
-        <div class="step-content">
-          <h3 class="process-step-title">Design & Prototipagem</h3>
-          <p class="process-step-description">
-            Criação de protótipos interativos para validar fluxos de usuário e experiência antes do desenvolvimento.
-          </p>
-        </div>
+        <h3 class="process-step-title">Design & Protótipo</h3>
+        <p class="process-step-description">
+          Prototipagem interativa para validar fluxos e experiência de usuário.
+        </p>
       </div>
-
       <div class="process-step">
         <div class="step-number">04</div>
-        <div class="step-content">
-          <h3 class="process-step-title">Desenvolvimento Ágil</h3>
-          <p class="process-step-description">
-            Entregas incrementais com feedback contínuo, garantindo alinhamento e adaptabilidade.
-          </p>
-        </div>
+        <h3 class="process-step-title">Desenvolvimento Ágil</h3>
+        <p class="process-step-description">
+          Entregas incrementais com feedback contínuo e alta adaptabilidade.
+        </p>
       </div>
-
       <div class="process-step">
         <div class="step-number">05</div>
-        <div class="step-content">
-          <h3 class="process-step-title">Testes & Qualidade</h3>
-          <p class="process-step-description">
-            Revisão completa de performance, segurança e usabilidade para garantir excelência no produto final.
-          </p>
-        </div>
+        <h3 class="process-step-title">Testes & Qualidade</h3>
+        <p class="process-step-description">
+          Validação de performance, segurança e usabilidade em cada entrega.
+        </p>
       </div>
-
       <div class="process-step">
         <div class="step-number">06</div>
-        <div class="step-content">
-          <h3 class="process-step-title">Implementação & Treinamento</h3>
-          <p class="process-step-description">
-            Deploy seguro e capacitação da sua equipe para uso eficiente e autônomo da solução.
-          </p>
-        </div>
+        <h3 class="process-step-title">Deploy & Treinamento</h3>
+        <p class="process-step-description">
+          Publicação segura e capacitação da sua equipe para operação autônoma.
+        </p>
       </div>
-
       <div class="process-step">
         <div class="step-number">07</div>
-        <div class="step-content">
-          <h3 class="process-step-title">Suporte & Evolução</h3>
-          <p class="process-step-description">
-            Acompanhamento contínuo, ajustes e otimizações para maximizar resultados a longo prazo.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- ===== Por que escolher a Labrego IA? ===== -->
-<section id="diferenciais" class="differentials">
-  <div class="container">
-    <div class="section-header">
-      <div class="badge">Por que escolher a Labrego IA?</div>
-      <h2 class="section-title">Nossa prioridade é a sua satisfação</h2>
-    </div>
-
-    <div class="differentials-grid">
-      <div class="differential-card">
-        <div class="differential-icon"><i class="fas fa-lightbulb"></i></div>
-        <h3 class="differential-title">Visão de Negócio</h3>
-        <p class="differential-description">
-          Tecnologia desenhada para funcionar no mundo real.
-        </p>
-      </div>
-
-      <div class="differential-card">
-        <div class="differential-icon"><i class="fas fa-bolt"></i></div>
-        <h3 class="differential-title">Agilidade com Qualidade</h3>
-        <p class="differential-description">
-          Entregas rápidas sem perder o cuidado com cada detalhe.
-        </p>
-      </div>
-
-      <div class="differential-card">
-        <div class="differential-icon"><i class="fas fa-sliders-h"></i></div>
-        <h3 class="differential-title">Customização Real</h3>
-        <p class="differential-description">
-          Nada de pacotes prontos — cada solução é única.
-        </p>
-      </div>
-
-      <div class="differential-card">
-        <div class="differential-icon"><i class="fas fa-user-friends"></i></div>
-        <h3 class="differential-title">Atendimento Próximo</h3>
-        <p class="differential-description">
-          Você fala direto com quem entende de tecnologia e negócio.
-        </p>
-      </div>
-
-      <div class="differential-card">
-        <div class="differential-icon"><i class="fas fa-handshake"></i></div>
-        <h3 class="differential-title">Compromisso com Resultados</h3>
-        <p class="differential-description">
-          Acompanhamos, ajustamos e garantimos o impacto que você busca.
+        <h3 class="process-step-title">Suporte Contínuo</h3>
+        <p class="process-step-description">
+          Acompanhamento, ajustes e otimizações para garantir resultados duradouros.
         </p>
       </div>
     </div>
