feat: add Thiago testimonial

--- a/pages/cases.html
+++ b/pages/cases.html
@@ -522,9 +522,7 @@
                             <i class="fas fa-star"></i>
                         </div>
                         <p>
-                            "O Vitriny AI transformou completamente nossa loja online. Em apenas 3 meses, 
-                            nossa conversão aumentou 47% e o ticket médio cresceu 35%. A equipe da Labrego IA 
-                            é extremamente profissional e o suporte é excepcional."
+                            "Nota: 10 (Promotor). 11/07/2025. Serviço: Aplicativos sob Medida. Tempo de parceria: Mais de 1 ano. Há pouco mais de um ano tive o privilégio de conhecer a Luana, que desde o início se mostrou extremamente atenciosa, cuidadosa e, acima de tudo, resolutiva. A partir da solução desenvolvida por vocês, nossa Barbearia passou por uma verdadeira transformação: hoje temos controle total dos nossos serviços e indicadores direto pelo celular, sem depender de planilhas ou processos manuais demorados. Além disso, nossos clientes passaram a realizar seus agendamentos de forma totalmente autônoma, graças à integração que também contempla o sistema de comandas da nossa lanchonete. Posso dizer, sem exagero, que existe uma Barbearia Cout antes da solução de vocês e outra completamente moderna depois dela. É um privilégio imenso ter construído essa parceria de confiança e inovação com vocês!"
                         </p>
                     </div>
                     <div class="testimonial-author">
@@ -532,8 +530,8 @@
                             <i class="fas fa-user"></i>
                         </div>
                         <div class="author-info">
-                            <div class="author-name">Carlos Silva</div>
-                            <div class="author-role">CEO, TechStore</div>
+                            <div class="author-name">Thiago</div>
+                            <div class="author-role">Investidor e sócio, Barbearia Cout</div>
                         </div>
                     </div>
                 </div>
