--- a/index.html
+++ b/index.html
@@ -433,15 +433,15 @@
             <div class="testimonials-grid">
                 <div class="testimonial-card">
                     <div class="testimonial-content">
-                        <p>"A Labrego IA transformou completamente nossa operação. O ROI foi de 300% no primeiro ano e continuamos crescendo."</p>
+                        <p>"Nota: 10 (Promotor). 11/07/2025. Serviço: Aplicativos sob Medida. Tempo de parceria: Mais de 1 ano. Há pouco mais de um ano tive o privilégio de conhecer a Luana, que desde o início se mostrou extremamente atenciosa, cuidadosa e, acima de tudo, resolutiva. A partir da solução desenvolvida por vocês, nossa Barbearia passou por uma verdadeira transformação: hoje temos controle total dos nossos serviços e indicadores direto pelo celular, sem depender de planilhas ou processos manuais demorados. Além disso, nossos clientes passaram a realizar seus agendamentos de forma totalmente autônoma, graças à integração que também contempla o sistema de comandas da nossa lanchonete. Posso dizer, sem exagero, que existe uma Barbearia Cout antes da solução de vocês e outra completamente moderna depois dela. É um privilégio imenso ter construído essa parceria de confiança e inovação com vocês!"</p>
                     </div>
                     <div class="testimonial-author">
                         <div class="author-avatar">
                             <i class="fas fa-user"></i>
                         </div>
                         <div class="author-info">
-                            <h4>Carlos Silva</h4>
-                            <span>CEO, TechCorp</span>
+                            <h4>Thiago</h4>
+                            <span>Investidor e sócio, Barbearia Cout</span>
                         </div>
                     </div>
                     <div class="testimonial-rating">
